# wasm-resume

./: .gitignore  Cargo.toml  build.sh
asset_source/: IMG_7355.xcf  close.aseprite  links.aseprite  notepad.aseprite  pumpkin-sound.xcf  window.aseprite  window2.aseprite
assets/lexi/: blank.json  home.json  homedev.json  links.json  work.json
assets/lexi/desktop/: home.json  homedev.json  links.json  work.json
assets/lexi/desktop/homedev/: picoparty.json  pumpkinsound.json
assets/lexi/desktop/work/: audit.json  illumina.json  tillster.json
assets/lexi/homedev/: pico-party.json  pumpkin-sound.json
src/: dev_tools.rs  main.rs
src/assets/: icons.rs  mod.rs
src/assets/lexi/: desktop.rs  mod.rs  resume.rs
src/desktop/: actions.rs  inputs.rs  layouts.rs  mod.rs
src/resume/: inputs.rs  layouts.rs  mod.rs
src/util/: handles.rs  mod.rs
wasm/: index.html
