[package]
name = "wasm-resume"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
bevy_aspect_ratio_mask = "0.2"
bevy_asset_loader = { version = "0.23.0", features = ["2d"] }
bevy_common_assets = { version = "0.13.0", features = ["json"] }
serde = "1.0.219"
web-sys = "0.3.77"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
