[package]
name = "wasm-resume"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", default-features = false, features = [] }
bevy_aspect_ratio_mask = "0.2"
bevy_asset_loader = { version = "0.23.0", features = ["2d"] }
bevy_common_assets = { version = "0.13.0", features = ["json"] }
serde = "1.0.219"
web-sys = "0.3.77"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = "abort"
strip = true

[features]
# Default to a native dev build.
default = ["dev_native"]
dev = [
    "bevy/dynamic_linking",
    "bevy/bevy_dev_tools",
    "bevy/bevy_ui_debug",
    "bevy/track_location",
]
dev_native = ["dev"]

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
